tests/neg/falseView.scala
object Test {

  private implicit val xs: Map[String, Int] = ???

  val x: Int = "abc" // error

}
